--- a/usercontrolwithdatabinding/usercontrolwithdatabinding.csproj
+++ b/usercontrolwithdatabinding/usercontrolwithdatabinding.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Address.cs" />
+    <Compile Include="Model\BindableBase.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\NotificationObject.cs" />
     <Compile Include="Model\PropertySupport.cs" />
@@ -85,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControls\NameControl.resx">
+      <DependentUpon>NameControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\usercontrolwithdatabinding.Model.Customer.datasource" />
     <None Include="Properties\Settings.settings">
