--- a/usercontrolwithdatabinding/usercontrolwithdatabinding.csproj
+++ b/usercontrolwithdatabinding/usercontrolwithdatabinding.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Model\Address.cs" />
     <Compile Include="Model\BindableBase.cs" />
     <Compile Include="Model\Customer.cs" />
+    <Compile Include="Model\CustomerValidator.cs" />
     <Compile Include="Model\NotificationObject.cs" />
     <Compile Include="Model\PropertySupport.cs" />
     <Compile Include="Program.cs" />
