--- a/usercontrolwithdatabinding_test/usercontrolwithdatabinding_test.csproj
+++ b/usercontrolwithdatabinding_test/usercontrolwithdatabinding_test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AddressTest.cs" />
     <Compile Include="CustomerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
